log created 6/22/20

- MVP done. MySQL database connected. Can add question and take quiz
  with any # of questions from 1 - size of db. No error handling.

6/28/20
- created InputHandler class to handle user errors.
- handled input in quizSelection. Currently only sout's to console, will make alert boxes.
- created amount variable in quizSelection to make verifying input possible.