@@ -1,4 +1,3 @@
-- change quizSelection error handling from sout to alert box
 
 - refactor variable names. Use of question(class), query, question string,
   etc. overlap. Choose better name to use throughout app and db for
@@ -11,13 +10,7 @@
 
 
 
-***************************************************
-                       DONE
-***************************************************
 
-- handle input errors from quizSelection page. Currently you can type
-  anything in. Needs to be able to accept 1 - size of db and correctly
-  handle everything else.
 
 
 
