@@ -5,5 +5,6 @@ log created 6/22/20
 
 6/28/20
 - created InputHandler class to handle user errors.
-- handled input in quizSelection. Currently only sout's to console, will make alert boxes.
+- handled input in quizSelection. Created label that notifies user if input is good or bad
 - created amount variable in quizSelection to make verifying input possible.
+- handled error in quiz if you hit submit without choosing an answer. Label informs user
